sealedsecret-issuer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealedsecret-issuer
spec:
  type: ClusterIP
  selector:
    app: sealedsecret-issuer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
