sealedsecret-issuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: sealedsecret-issuer
spec:
  rules:
    - host: sealedsecret-issuer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sealedsecret-issuer
                port:
                  number: 8080
